--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/mypic.jpg" type="image/x-icon">
 
     <!-- font awsome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
@@ -19,7 +20,7 @@
                     <li><a href=""> <b>HOME</b></a></li>
                     <li><a href="">PROJECTS</a></li>
                     <li><a href="#aboutme">ABOUT</a></li>
-                    <li><a href="">SKILL</a></li>
+                    <li><a href="">TOOL & SKILLS</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
         </nav>
@@ -47,14 +48,14 @@
     <main>
         <section id="aboutme" class="aboutme">
             <div class="SectionInside">
-            <h1 class="aboutmeTitle">ABOUT ME</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eligendi non labore rem nostrum amet placeat dolorem dignissimos accusamus. Illo aperiam soluta eum laudantium suscipit sit voluptatibus excepturi molestias distinctio nobis, voluptate neque sunt ullam quas deserunt expedita ipsam quam?</p>
+            <h1 class="titleborder">ABOUT ME</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores quo, veritatis similique eligendi culpa autem consequatur dicta ab nemo nostrum aliquam. Quis, laborum, cumque distinctio dicta maxime ipsum rem aut illo dolore, eos sapiente tempore eius impedit? Dolores voluptates molestiae nam qui architecto temporibus repellat, earum tempore laborum quia quae fugiat amet quaerat libero iusto suscipit in neque soluta cumque fuga! Deleniti voluptates, recusandae at est reiciendis aspernatur. Delectus, laboriosam autem vero soluta deserunt natus voluptatum optio commodi neque aut modi error nemo tenetur amet veniam tempora, harum, rem blanditiis omnis similique in doloremque? Numquam animi iste hic incidunt sunt.</p>
             </div>
         </section>
 
         <section id="" class="skill">
             <div class="SectionInside">
-                <h1 class="skillTitle">MY SKILL</h1>
+                <h1 class="titleborder">MY SKILL</h1>
 
                 <div class="skills">
                     <div class="skillCard">
@@ -94,16 +95,27 @@
 
         <section class="letswork pad20">
             <div class="formSection">
+                <h1 class="titleborder">LET'S WORK TOGETHER</h1>
+                <div class="mainform">
+                <div>
+                    <h1>Write me a message <br> for more Information!</h1>
+                    <p>I'm here to help and answer any queries that you might have. 
+                        <br>Got anything you want me to do ? 
+                        <br>Just send me a message and we can discuss further.</p>
+                </div>
+                
                 <div class="frominside">
                 <form>
                     <input type="text" placeholder="Name">
                     <input type="email" name="" id="" placeholder="email">
                     <input type="number" name="" id="" placeholder="Number">
                     <textarea name="" id="" cols="30" rows="10" placeholder="massage"></textarea>
+                    <button>Send Massge</button>
                 </form>
                 </div>
-
             </div>
+            </div>
+            
         </section>
     </main>
 </body>
